<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/whi"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:orientation="vertical"
    tools:context="edu.app.kmit.stockselection.CreateShop">

    <android.support.v7.widget.CardView
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_width="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/back"
                android:layout_width="0dp"
                android:layout_weight=".10"
                android:layout_margin="8dp"
                android:onClick="back"
                android:layout_height="match_parent"
                android:contentDescription="@string/back"
                android:src="@drawable/back"
                />
            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_weight=".82"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_height="match_parent" />

            <ImageView
                android:layout_width="0dp"
                android:layout_weight=".08"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:onClick="save"
                android:contentDescription="@string/save"
                android:src="@drawable/save"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/shopname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/shopname" />
                </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <android.support.design.widget.TextInputLayout

                    android:layout_width="0dp"
                    android:layout_weight=".92"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:inputType="textPostalAddress" />
                </android.support.design.widget.TextInputLayout>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_margin="3dp"
                    android:layout_weight=".08"
                    android:onClick="clear"
                    android:id="@+id/addressimg"
                    android:contentDescription="@string/address"
                    android:src="@drawable/clear"
                    android:layout_height="match_parent" /></LinearLayout>

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/vendorname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vendorname"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/timings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/timings" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/website"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/website"
                        android:inputType="textUri" />
                </android.support.design.widget.TextInputLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout

                    android:layout_width="0dp"
                    android:layout_weight=".92"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/extrainfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/info"
                        android:inputType="textLongMessage" />
                </android.support.design.widget.TextInputLayout>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_margin="3dp"
                    android:layout_weight=".08"
                    android:onClick="clear"
                    android:id="@+id/infoimg"
                    android:contentDescription="@string/info"
                    android:src="@drawable/clear"
                    android:layout_height="match_parent" /></LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</LinearLayout>
