<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

        <TextView
                android:gravity="center"
                android:id="@+id/shopname"
                android:textAllCaps="true"
                android:textSize="17sp"
                android:padding="7dp"
            android:ellipsize="marquee"
            android:singleLine="true"

                android:textStyle="bold"
            android:layout_weight=".84"
                android:layout_width="0dp"

                android:textColor="@color/white"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/edit"
                android:layout_width="0dp"
                android:layout_weight=".08"
                android:layout_margin="8dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/back"
                android:src="@drawable/edit"
                />
            <ImageView
                android:id="@+id/delete"
                android:layout_width="0dp"
                android:layout_weight=".08"
                android:layout_margin="8dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/back"
                android:src="@drawable/delete"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_margin="3dp"
                android:layout_weight=".10"
                android:contentDescription="@string/rate"
                android:src="@drawable/rate"
                android:layout_height="match_parent" />
            <TextView

                android:id="@+id/rate"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_weight=".90"
                android:layout_margin="5dp"
                android:layout_height="wrap_content" /></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_margin="3dp"
                android:layout_weight=".10"
                android:contentDescription="@string/quantity"
                android:src="@drawable/quantity"
                android:layout_height="match_parent" />
            <TextView

                android:id="@+id/quantity"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_weight=".90"
                android:layout_margin="5dp"
                android:layout_height="wrap_content" /></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_margin="3dp"
                android:layout_weight=".10"
                android:contentDescription="@string/warranty"
                android:src="@drawable/warranty"
                android:layout_height="match_parent" />
            <TextView

                android:id="@+id/warranty"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_weight=".90"
                android:layout_margin="5dp"
                android:layout_height="wrap_content" /></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_margin="3dp"
                android:layout_weight=".10"
                android:contentDescription="@string/brand"
                android:src="@drawable/brand"
                android:layout_height="match_parent" />
            <TextView

                android:id="@+id/brand"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_weight=".90"
                android:layout_margin="4dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_margin="3dp"
                android:layout_weight=".10"
                android:contentDescription="@string/timings"
                android:src="@drawable/time"
                android:layout_height="match_parent" />
            <TextView

                android:id="@+id/datetime"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_weight=".90"
                android:layout_margin="4dp"
                android:layout_height="wrap_content" /></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_margin="3dp"
                android:layout_weight=".10"
                android:contentDescription="@string/info"
                android:src="@drawable/info"
                android:layout_height="match_parent" />
            <TextView

                android:id="@+id/info"
                android:textSize="15sp"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:layout_width="0dp"
                android:layout_weight=".90"
                android:layout_margin="4dp"
                android:layout_height="wrap_content" /></LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>